--- a/style.css
+++ b/style.css
@@ -126,3 +126,33 @@ width: 20px;
     margin-right: auto;
     text-align: center;
 }
+
+.calculator {
+    display: flex;
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 100px;
+    width: 300px;
+    background-color: #837f7f;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+.calculator-display {
+    height: 25px;
+    background-color: #ffffff;
+    color: #333;
+    border: solid 1px #252525;
+    line-height: 25px;
+    padding: 3px;
+}
+
+.calc-grid {
+    display: grid;
+    grid-template-columns: auto auto auto;
+}
+
+.calc-btn {
+    height: 30px;
+}
