--- a/style.css
+++ b/style.css
@@ -92,13 +92,14 @@ input {
 }
 
 .quiz {
-    box-shadow: 3px 5px 3px #0e0d0d8c;
+    box-shadow: 3px 5px 3px 3px #0e0d0d8c;
     width: 500px;
     display: flex;
     flex-direction: column;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 20px;
+    margin-top: 18px;
 }
 
 .question {
